# datasette-acl-share

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_acl_share/: __init__.py
datasette_share/: __init__.py
docs/: integration-guide.md
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: screenshots.mjs
frontend/src/: ShareDialog.svelte  ShareDialog.svelte.test.ts  main.ts
frontend/src/lib/: agents.test.ts  agents.ts  api.test.ts  api.ts  avatar.test.ts  avatar.ts  grants.test.ts  grants.ts  groups.test.ts  groups.ts  icons.ts  people.test.ts  people.ts  pills.test.ts  pills.ts  types.ts
tests/: test_share.py
tests/sample_plugins/: sample_docs.py  sample_resources.py
tests/sample_plugins/sample_resource_specs/: __init__.py  _models.py  channel.py  paste.py  playlist.py  project.py
tests/templates/: sample_doc.html  sample_docs_index.html  sample_resources.html
