[project]
name = "datasette-acl-share"
version = "0.0.1a1"
description = "Reusable Google-Docs-style share dialog for Datasette (<datasette-acl-share-dialog>)"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers = ["Framework :: Datasette"]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a20",
    "datasette-vite>=0.0.1a4",
    # The JSON API the share dialog drives lives in datasette-acl. Pin to the
    # tip branch on GitHub until that work lands in a tagged release.
    "datasette-acl @ git+https://github.com/datasette/datasette-acl@acl/7-json-api",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points.datasette]
acl_share = "datasette_acl_share"

[project.urls]
Homepage = "https://github.com/datasette/datasette-acl-share"
Changelog = "https://github.com/datasette/datasette-acl-share/releases"
Issues = "https://github.com/datasette/datasette-acl-share/issues"

[tool.setuptools.packages.find]
include = ["datasette_acl_share"]

[tool.setuptools.package-data]
datasette_acl_share = ["static/**/*", "manifest.json"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
