[project]
name = "datasette-acl-share"
version = "0.0.1a7"
description = "Reusable Google-Docs-style share dialog for Datasette (<datasette-acl-share-dialog>)"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers = ["Framework :: Datasette"]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a30",
    "datasette-vite>=0.0.1a4",
    "datasette-acl>=0.6a1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    # The `just dev` demo stack, from PyPI (no local-checkout overlay):
    # user-profiles (people search + the /-/profiles/api/resolve roster
    # enrichment endpoint), gotham (demo actors + newsrooms), debug-bar (actor
    # switcher).
    "datasette-user-profiles>=0.1.0a9",
    "datasette-debug-gotham>=0.1.0a3",
    "datasette-debug-bar>=0.0.1a1",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points.datasette]
acl_share = "datasette_acl_share"

[project.urls]
Homepage = "https://github.com/datasette/datasette-acl-share"
Changelog = "https://github.com/datasette/datasette-acl-share/releases"
Issues = "https://github.com/datasette/datasette-acl-share/issues"

[tool.setuptools.packages.find]
include = ["datasette_acl_share"]

[tool.setuptools.package-data]
datasette_acl_share = ["static/**/*", "manifest.json"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
